--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
             align-items: center;
             justify-content: center;
         }
-        .square.Light{
+        .square.light{
             background-color: #caa262;
         }
         .square.dark{
