--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ChessBattle</title>
+    <link rel="icon" href="icon.ico" type="image/x-icon">
+
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <style>
         .chessboard{
